// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MRadio should not render icon when not part of a group 1`] = `
<li class="m-radio">
    <input type="radio" id="uuid" value="radio" class="m-radio__hidden">
    <label for="uuid" class="m-radio__wrap"><span aria-hidden="true" class="m-radio__input"></span> <span class="m-radio__label"> <span class="m-radio__label__content"></span> </span>
    </label>
</li>
`;

exports[`MRadio should render correctly 1`] = `
<li class="m-radio">
    <input type="radio" id="uuid" value="radio" class="m-radio__hidden">
    <label for="uuid" class="m-radio__wrap"><span aria-hidden="true" class="m-radio__input"></span> <span class="m-radio__label"> <span class="m-radio__label__content">label</span> </span>
    </label>
</li>
`;

exports[`MRadio should render correctly name when set 1`] = `
<li class="m-radio">
    <input type="radio" id="uuid" name="name" value="radio" class="m-radio__hidden">
    <label for="uuid" class="m-radio__wrap"><span aria-hidden="true" class="m-radio__input"></span> <span class="m-radio__label"> <span class="m-radio__label__content"></span> </span>
    </label>
</li>
`;

exports[`MRadio should render correctly when disabled 1`] = `
<li class="m-radio m--is-disabled">
    <input type="radio" id="uuid" disabled="disabled" aria-hidden="true" value="radio" class="m-radio__hidden">
    <label for="uuid" class="m-radio__wrap"><span aria-hidden="true" class="m-radio__input"></span> <span class="m-radio__label"> <span class="m-radio__label__content"></span> </span>
    </label>
</li>
`;

exports[`MRadio should render correctly when position is right 1`] = `
<li class="m-radio m--is-input-right">
    <input type="radio" id="uuid" value="radio" class="m-radio__hidden">
    <label for="uuid" class="m-radio__wrap"><span aria-hidden="true" class="m-radio__input"></span> <span class="m-radio__label"> <span class="m-radio__label__content"></span> </span>
    </label>
</li>
`;

exports[`MRadio should render correctly when radio is selected 1`] = `
<li class="m-radio m--is-checked">
    <input type="radio" id="uuid" value="radio" checked="checked" class="m-radio__hidden">
    <label for="uuid" class="m-radio__wrap"><span aria-hidden="true" class="m-radio__input"></span> <span class="m-radio__label"> <span class="m-radio__label__content"></span> </span>
    </label>
</li>
`;
